# gifscii

./: Cargo.toml  LICENSE  README.md
src/: convert.rs  debug.rs  main.rs  print.rs  scale.rs
